given all return links a class and styled it. given all new and edit views a heading to prevent accidentally clicking on the navbar and to fill out the page a bit.

--- a/public/style.css
+++ b/public/style.css
@@ -52,3 +52,6 @@ button:focus, input[type="button"]:focus, input[type="submit"]:focus {
 a {text-decoration: none; color: black;}
 a:focus {color: darkgrey;}
 a:visited {text-decoration: none;}
+
+a.return {color: red;}
+a.return:focus {color: darkred;}
