--- a/views/conditions/new.erb
+++ b/views/conditions/new.erb
@@ -1,3 +1,6 @@
+<h3>Add new condition:</h3>
+<br>
+
 <form action="/wellbeing/conditions" method="post" autocomplete="off">
   <label for="patient_id">Patient:</label>
   <select name="patient_id" required>
