--- a/views/lessons/edit.erb
+++ b/views/lessons/edit.erb
@@ -1,3 +1,6 @@
+<h3>Edit lesson:</h3>
+<br>
+
 <form action="/gym/lessons/<%=@lesson.id()%>" method="post">
   <label for="course">Course:</label>
   <input type="text" name="course" value="<%=@lesson.course%>">
