--- a/views/lessons/new.erb
+++ b/views/lessons/new.erb
@@ -1,3 +1,6 @@
+<h3>Add new lesson:</h3>
+<br>
+
 <form action="/gym/lessons" method="post" autocomplete="off">
   <label for="course">Course:</label>
   <input type="text" name="course" required>
