--- a/views/members/new.erb
+++ b/views/members/new.erb
@@ -1,3 +1,6 @@
+<h3>Add new member:</h3>
+<br>
+
 <form action="/gym/members" method="post" autocomplete="off">
   <label for="name">Full Name:</label>
   <input type="text" name="name" required>
