--- a/views/patients/edit.erb
+++ b/views/patients/edit.erb
@@ -1,4 +1,5 @@
-
+<h3>Edit patient:</h3>
+<br>
 
 <form action="/wellbeing/patients/<%=@patient.id()%>" method="post">
   <input type="hidden" name="member" value="<%=@patient.membership%>">
