--- a/views/patients/new.erb
+++ b/views/patients/new.erb
@@ -1,6 +1,5 @@
-<p>Add new patient:</p>
-
-
+<h3>Add new patient:</h3>
+<br>
 
 <form action="/wellbeing/patients" method="post" autocomplete="off">
   <label for="patient_name">Full Name:</label>
