--- a/views/physios/new.erb
+++ b/views/physios/new.erb
@@ -1,4 +1,5 @@
-<p>Add new physio:</p>
+<h3>Add new physio:</h3>
+<br>
 
 <form action="/wellbeing/physios" method="post" autocomplete="off">
   <label for="physio_name">Full Name:</label>
