--- a/views/members/edit.erb
+++ b/views/members/edit.erb
@@ -1,3 +1,6 @@
+<h3>Edit member:</h3>
+<br>
+
 <form action="/gym/members/<%=@member.id()%>" method="post">
   <label for="name">Full Name:</label>
   <input type="text" name="name" value="<%=@member.name%>">
