--- a/views/physios/edit.erb
+++ b/views/physios/edit.erb
@@ -1,3 +1,6 @@
+<h3>Edit physio:</h3>
+<br>
+
 <form action="/wellbeing/physios/<%=@physio.id()%>" method="post">
   <label for="physio_name">Full Name:</label>
   <input type="text" name="physio_name" value="<%=@physio.physio_name%>" required>
