--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@
 .home-links {
   display: flex;
   justify-content: center;
-  width: 120%;
+  padding-left: 12%;
 }
 
 .home-left {
@@ -47,6 +47,8 @@ button:focus, input[type="button"]:focus, input[type="submit"]:focus {
 
 .topnav {
   font-size: 20px;
+  /* border-bottom-color: black;
+  border-bottom-style: solid; */
 }
 
 a {text-decoration: none; color: black;}
