--- a/views/lessons/index.erb
+++ b/views/lessons/index.erb
@@ -13,13 +13,13 @@
   <hr/>
   <div class="buttons">
     <form action="/gym/lessons/<%=lesson.id()%>" method="get">
-      <input class="button" type="submit" value="View this lesson">
+      <input class="button" type="submit" value="View lesson">
     </form>
     <form action="/gym/lessons/<%=lesson.id()%>/edit" method="get">
-      <input class="button edit" type="submit" value="Edit this lesson">
+      <input class="button edit" type="submit" value="Edit lesson">
     </form>
     <form action="/gym/lessons/<%=lesson.id()%>/delete" method="post">
-      <input class="button delete" type="submit" value="Delete this lesson">
+      <input class="button delete" type="submit" value="Delete lesson">
     </form>
   </div>
 
