--- a/views/members/index.erb
+++ b/views/members/index.erb
@@ -13,13 +13,13 @@
   <hr/>
   <div class="buttons">
     <form action="/gym/members/<%=member.id()%>" method="get">
-      <input class="button" type="submit" value="View this member">
+      <input class="button" type="submit" value="View member">
     </form>
     <form action="/gym/members/<%=member.id()%>/edit" method="get">
-      <input class="button edit" type="submit" value="Edit this member">
+      <input class="button edit" type="submit" value="Edit member">
     </form>
     <form action="/gym/members/<%=member.id()%>/delete" method="post">
-      <input class="button delete" type="submit" value="Delete this member">
+      <input class="button delete" type="submit" value="Delete member">
     </form>
   </div>
 
