--- a/views/patients/index.erb
+++ b/views/patients/index.erb
@@ -18,13 +18,13 @@
   <hr/>
   <div class="buttons">
     <form action="/wellbeing/patients/<%=patient.id()%>" method="get">
-      <input class="button" type="submit" value="View this patient">
+      <input class="button" type="submit" value="View patient">
     </form>
     <form action="/wellbeing/patients/<%=patient.id()%>/edit" method="get">
-      <input class="button edit" type="submit" value="Edit this patient">
+      <input class="button edit" type="submit" value="Edit patient">
     </form>
     <form action="/wellbeing/patients/<%=patient.id()%>/delete" method="post">
-      <input class="button delete" type="submit" value="Delete this patient">
+      <input class="button delete" type="submit" value="Delete patient">
     </form>
   </div>
 
