--- a/views/physios/index.erb
+++ b/views/physios/index.erb
@@ -12,13 +12,13 @@
 
   <div class="buttons">
     <form action="/wellbeing/physios/<%=physio.id()%>" method="get">
-      <input class="button" type="submit" value="View this physio">
+      <input class="button" type="submit" value="View physio">
     </form>
     <form action="/wellbeing/physios/<%=physio.id()%>/edit" method="get">
-      <input class="button edit" type="submit" value="Edit this physio">
+      <input class="button edit" type="submit" value="Edit physio">
     </form>
     <form action="/wellbeing/physios/<%=physio.id()%>/delete" method="post">
-      <input class="button delete" type="submit" value="Delete this physio">
+      <input class="button delete" type="submit" value="Delete physio">
     </form>
   </div>
 
