--- a/views/members/create.erb
+++ b/views/members/create.erb
@@ -19,4 +19,4 @@
 </ul>
 <hr/>
 
-<p><a href="/gym/members">Return</a> to directory.</p>
+<p><a class="return" href="/gym/members">Return</a> to directory.</p>
