--- a/views/lessons/delete.erb
+++ b/views/lessons/delete.erb
@@ -1,3 +1,3 @@
 <h3>Lesson has been successfully deleted from the database.</h3>
 
-<p><a href="/gym/members">Return</a> to directory.</p>
+<p><a class="return" href="/gym/members">Return</a> to directory.</p>
