--- a/views/lessons/update.erb
+++ b/views/lessons/update.erb
@@ -20,4 +20,4 @@
 </ul>
 <hr/>
 
-<p><a href="/gym/lessons">Return</a> to directory.</p>
+<p><a class="return" href="/gym/lessons">Return</a> to directory.</p>
