--- a/views/home.erb
+++ b/views/home.erb
@@ -7,10 +7,10 @@
     <h2 class="home-section-title">Gym</h2>
     <p>Manage gym members and lessons. </p>
     <form action="/gym/members" method="get">
-      <input type="submit" value="View gym members">
+      <input class="homebutton" type="submit" value="View gym members">
     </form>
     <form action="/gym/lessons" method="get">
-      <input type="submit" value="View gym lessons">
+      <input class="homebutton" type="submit" value="View gym lessons">
     </form>
   </div>
 
@@ -18,10 +18,10 @@
     <h2 class="home-section-title">Wellbeing</h2>
     <p>Manage physiotherapists and patients.</p>
     <form action="/wellbeing/patients" method="get">
-      <input type="submit" value="View physiotherapy patients">
+      <input class="homebutton" type="submit" value="View physio patients">
     </form>
     <form action="/wellbeing/physios" method="get">
-      <input type="submit" value="View physiotherapists">
+      <input class="homebutton" type="submit" value="View physiotherapists">
     </form>
   </div>
 </div>
