notes fields in condition new and show fields are now styled together. notes field in new is now longer and notes field in show is now shorter

--- a/views/conditions/new.erb
+++ b/views/conditions/new.erb
@@ -17,7 +17,7 @@
   <label for="type">Type: </label>
   <input type="text" name="type" required>
   <label for="notes">Notes:</label>
-  <input type="text" name="notes">
+  <input class="note" type="text" name="notes">
   <input type="submit" value="Add condition">
 </form>
 
